# invobox_erp

./: README.md  pubspec.yaml
.github/workflows/: build_windows.yml
lib/: main.dart
lib/controllers/: invoice_list_controller.dart  login_controller.dart  new_sales_controller.dart
lib/core/: app_routes.dart  app_theme.dart
lib/models/: login_model.dart  sales_invoice_model.dart
lib/views/invoice_list/: invoice_list_view.dart
lib/views/login/: login_view.dart
lib/views/new_sales/: new_sales_view.dart
lib/widgets/: shared_widgets.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Assets.xcassets/AppIcon.appiconset/: Contents.json
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc
